tests/errors/constraints/comprehensive-violations.expect
---CODE---
1
---STDERR---
error: instantiation violates parameter constraint
   ┌─ tests/errors/constraints/comprehensive-violations.fil:5:3
   │
 5 │   A < 10,
   │   ^^^^^^ constraint was violated
   ·
12 │   Bad := new ImpossibleConstraints[15];
   │              --------------------- instantiation occurs here

error: instantiation violates parameter constraint
   ┌─ tests/errors/constraints/comprehensive-violations.fil:6:3
   │  
 6 │ ╭   A > 20  // Cannot be both < 10 and > 20
 7 │ │ {
   │ ╰^ constraint was violated
   · │
12 │     Bad := new ImpossibleConstraints[15];
   │                --------------------- instantiation occurs here

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
